--- a/public_html/index.html
+++ b/public_html/index.html
@@ -54,7 +54,7 @@
         <div class="header-content container">
             <h1 class="header-title">
                 <span class="up">HI!</span>
-                <span class="down">Welcome</span>
+                <span class="down">Welcome To Team</span>
             </h1>
             <p class="header-subtitle">FRONTEND WEB DESIGNER</p>            
 
